package com.company;

public class Schaf {

  // EINGESCHAFTEN / ATTRIBUTE
  int mengeWolle;


  // KONSTRUKTOREN



  // METHODEN
  public void rasieren() {
    System.out.println("Dieses Schaaf hat viel Wolle. Bitte rasieren!");
  }
}
