@startuml

title __UDEMY-JAVA-KURS-OOP_II's Class Diagram__\n

  package com.company {
    class Audi {
    }
  }
  

  package com.company {
    class Auto {
    }
  }
  

  package com.company {
    class BMW {
    }
  }
  

  package com.company {
    class Hund {
    }
  }
  

  package com.company {
    class Kuh {
    }
  }
  

  package com.company {
    class Main {
    }
  }
  

  package com.company {
    class Mercedes {
    }
  }
  

  package com.company {
    class Opel {
    }
  }
  

  package com.company {
    class Schaf {
    }
  }
  

  package com.company {
    class Tier {
    }
  }
  

  package com.company {
    class VW {
    }
  }
  

  Audi -up-|> Auto
  BMW -up-|> Auto
  Hund -up-|> Tier
  Kuh -up-|> Tier


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
